<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SymptonManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="title_activity_patient_homepage">PatientHomepage</string>
    <string name="missed_checkins">Missed Check-In\'s</string>
    <string name="patient_missed_checkins">Missed\nCheck-In\'s</string>
    <string name="alerts">Alerts</string>
    <string name="medication">Medication</string>
    <string name="patient_checkin_record">Check-In\nRecord</string>
    <string name="checkin_record">Check-In Record</string>
    <string name="profile_data">Profile Data</string>
    <string name="patient_profile_data">Profile\nData</string>
    <string name="logout">LogOut</string>
    <string name="desc">Desc</string>
    <string name="asc">Asc</string>
    <string name="sort_date">Sort Date</string>
    <string name="title_activity_doctor_homepage">DoctorHomepage</string>
    <string name="alarming_symptons">Alarming Symptons</string>
    <string name="patients">Patients</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="list_of_doctors">List Of Doctors</string>
    <string name="title_activity_patient_profile_data">PatientProfileData</string>
    <string name="title_activity_patient_list_of_doctors">PatientListOfDoctors</string>
    <string name="title_activity_patient_alarm_configurations">PatientAlarmConfigurations</string>
    <string name="add_time">Add Time</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="alarm_configurations">Alarm Configurations</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="doctors">Doctors</string>
    <string name="title_activity_medication_data">MedicationData</string>
    <string name="medication_name">Medication Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dose">Dose</string>
    <string name="observations">Observations</string>
    <string name="state">State</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="title_activity_check_in">Check-In</string>
    <string name="check_in">Check In</string>
    <string name="title_activity_check_in_questions">CheckInQuestions</string>
    <string name="checkQuestions_q1">How bad is your throat pain?</string>
    <string name="checkQuestions_q2">Does your pain stop you from eat or drink?</string>
    <string name="checkQuestions_q3">Did you take your pain medication?</string>
    <string name="controlled">Controlled</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="no">No</string>
    <string name="some">Some</string>
    <string name="yes">Yes</string>
    <string name="next">Next</string>
    <string name="title_activity_check_in_medication">CheckInMedication</string>
    <string name="checkMedication_question">Did you take your&#8230;</string>
    <string name="title_activity_check_in_message">CheckInMessage</string>
    <string name="attach_photo">Attach Photo?</string>
    <string name="attach">Attach</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="search">Search</string>
    <string name="title_activity_doctor_profile_data">DoctorProfileData</string>
    <string name="title_activity_doctor_patient_file">DoctorPatientFile</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="add_medication">Add Medication</string>
    <string name="title_activity_patient_check_in_list">PatientCheckInList</string>
    <string name="specialization">Specialization</string>
    <string name="title_activity_medicine_list">MedicineList</string>
    <string name="medicine_list">Medicine List</string>
    <string name="composition">Composition</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="confirm">Confirm</string>
    <string name="date_checkin">Date CheckIn</string>
    <string name="throat_level">Throat Level</string>
    <string name="pain_level">Pain Level</string>
    <string name="toke_meds">Took Meds</string>
    <string name="sympton">Sympton</string>
    <string name="situation">Situation</string>
    <string name="date">Date</string>
    <string name="title_activity_chat">Chat</string>
    <string name="send">Send</string>
    <string name="photo">Photo</string>
    <string name="sure_you_want_quit">Sure you want quit Sympton Management?</string>
    <string name="successfuly_edited">Successfuly Edited</string>
    <string name="please_insert_at_least_4_alarms">Please Insert At Least 4 Alarms!</string>
    <string name="sure_you_want_logout">Sure you want LogOut Symptom Management?</string>
    <string name="login_failed_check_your_internet_connection_and_credentials_">Login failed, check your Internet connection and credentials.</string>
    <string name="please_insert_a_message_">Please, insert a message!</string>
    <string name="error_sending_message">Error Sending Message</string>
    <string name="you_need_take_at_least_one_medication_">You Need Take At Least One Medication!</string>
    <string name="it_s_not_possible_open_the_folder_">It\'s not possible open the folder!</string>
    <string name="it_s_not_possible_open_the_camera_">It\'s not possible open the camera!</string>
    <string name="select_throat_pain_level_">Select Throat Pain Level!</string>
    <string name="select_stop_eat_drink_question">Select Stop Eat/Drink Question</string>
    <string name="did_you_take_meds_">Did You Take Meds?</string>
    <string name="don_t_have_any_medication_associated_">Don\'t Have Any Medication Associated!</string>
    <string name="successfully_created">Successfully Created</string>

</resources>
