<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="miguelmaciel.capstone.symptonmanagement.MedicationData$PlaceholderFragment" >

        <TextView
            android:id="@+id/tv_MedicationData_MedicationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication_name" />

        <EditText
            android:id="@+id/et_MedicationData_MedicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tv_MedicationData_StartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_MedicationData_StartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/btn_MedicationData_CalendarStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/date"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:src="@drawable/ic_action_calendar" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_MedicationData_EndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_MedicationData_EndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/btn_MedicationData_CalendarEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/date"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:src="@drawable/ic_action_calendar" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_MedicationData_Dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dose" />

        <EditText
            android:id="@+id/et_MedicationData_Dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_MedicationData_Observations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observations" />

        <EditText
            android:id="@+id/et_MedicationData_Observations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <TextView
            android:id="@+id/tv_MedicationData_State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_MedicationData_Active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/active" />

            <RadioButton
                android:id="@+id/rb_MedicationData_Inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inactive" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>